--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library(${PROJECT_NAME} SHARED ${SOURCES})
 set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
 target_include_directories(${PROJECT_NAME}
     PRIVATE
+        ${SRC_DIR}/data
         ${SRC_DIR}/events
         ${SRC_DIR}/types
         ${SRC_DIR}/types/cells
@@ -28,6 +29,7 @@ target_include_directories(${PROJECT_NAME}
         ${SRC_DIR}/types/layers
         ${SRC_DIR}/types/popups
         ${SRC_DIR}/types/singletons
+        ${SRC_DIR}/utils
 )
 
 if (NOT DEFINED ENV{GEODE_SDK})
