Restructure the codebase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,10 @@ target_include_directories(${PROJECT_NAME}
     PRIVATE
         ${SRC_DIR}/data
         ${SRC_DIR}/events
+        ${SRC_DIR}/general-purpose
         ${SRC_DIR}/types
         ${SRC_DIR}/types/cells
         ${SRC_DIR}/types/cells-wide
-        ${SRC_DIR}/types/general-purpose
         ${SRC_DIR}/types/layers
         ${SRC_DIR}/types/popups
         ${SRC_DIR}/types/singletons
